test/statements/elliot/loops/modifyIndicesStandalone.good
modifyIndicesStandalone.chpl:5: error: cannot assign to const variable
modifyIndicesStandalone.chpl:10: error: cannot assign to const variable
modifyIndicesStandalone.chpl:15: error: cannot assign to const variable
